--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     restart: always
     stdin_open: true
     tty: true
-    expose:
-      - 8322
+    ports:
+      - 8322:8322
     volumes:
       - ./bitcoin.conf:/root/.bitcoin/bitcoin.conf
       - ./bitcoin.conf:/home/bitcoin/.bitcoin/bitcoin.conf
